Added my message

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Satisfy">
 <link href="https://fonts.googleapis.com/css2?family=Crafty+Girls&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster&effect=shadow-multiple">
-<style>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"><style>
 html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 .w3-tag {height:15px;width:15px;padding:0;margin-top:6px;cursor:pointer}
 </style>
@@ -67,6 +71,19 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     </div>
 
     <!-- Insert your message below here -->
+
+    <!-- Message from Leon -->
+    <div style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Child_speaking_with_Billy_Bob_at_Showbiz_Pizza_in_Fayetteville%2C_Arkansas.jpg); background-size: 100% 100%;
+    width: 66%; margin: 0 auto; border-radius: 5px; padding: 20px;">
+      <div style="font-family: 'Raleway', sans-serif; background-color: #202124; color: whitesmoke; opacity: 90%;
+      width: fit-content; margin: auto auto; padding: 20px; border-radius: 5px; text-align: center;">
+        <p>✨awesome tutorial!✨</p>
+        <p>w3schools makes the world a better place</p>
+  
+        <p>🖥️ from: Leon | Austria | 01-03-2023</p>
+      </div>
+    </div>
+    <!-- end of message-->
 
     <!-- Message from Ivan Tendou -->
     <p>Thank you for this easy tutorial, -Ivan Tendou</p>
