Changed way font is imported

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet"><style>
 html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
 .w3-tag {height:15px;width:15px;padding:0;margin-top:6px;cursor:pointer}
 </style>
@@ -75,7 +74,8 @@ html,body,h1,h2,h3,h4 {font-family:"Lato", sans-serif}
     <!-- Message from Leon -->
     <div style="background-image: url(https://upload.wikimedia.org/wikipedia/commons/7/71/Child_speaking_with_Billy_Bob_at_Showbiz_Pizza_in_Fayetteville%2C_Arkansas.jpg); background-size: 100% 100%;
     width: 66%; margin: 0 auto; border-radius: 5px; padding: 20px;">
-      <div style="font-family: 'Raleway', sans-serif; background-color: #202124; color: whitesmoke; opacity: 90%;
+      <div style="@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+      font-family: 'Raleway', sans-serif; background-color: #202124; color: whitesmoke; opacity: 90%;
       width: fit-content; margin: auto auto; padding: 20px; border-radius: 5px; text-align: center;">
         <p>✨awesome tutorial!✨</p>
         <p>w3schools makes the world a better place</p>
